Adds encoder/decoder using Jakarta JSON Binding
The implementation does not provide the actual Jakarta JSON Binding
implementaions but the tests use Eclipse Yasson refernce implementation.

Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <module>jaxrs2</module>
     <module>java11</module>
     <module>jakarta</module>
+    <module>jakarta-jsonb</module>
     <module>json</module>
     <module>okhttp</module>
     <module>googlehttpclient</module>
